@@ -1,6 +1,15 @@
+[brewbuild]
+timeout = 300
+remove = 0
+plugin = Test::BrewBuild::Plugin::DefaultExec
+save = 0
+debug = 0
+legacy = 0
+
 [tester]
 ip = 0.0.0.0
 port = 7800
+
 [dispatch]
 testers = 127.0.0.1, 127.0.0.1:9999
 repo = https://github.com/stevieb9/p5-test-brewbuild
