@@ -1,0 +1,7 @@
+[brewbuild]
+timeout = 99
+remove = 1
+plugin = lib/Test/BrewBuild/Plugin/UnitTestPluginInst.pm
+save = 1
+debug = 1
+legacy = 1
