@@ -1,6 +1,7 @@
 Revision history for Test-BrewBuild
 
 2.05    xxx
+        - added [brewbuild] section to config file (closes #128)
 
 2.04    2016-04-27
         - Results from MSWin now properly show the _bit suffix for the perl used
